base/engine/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
  labels:
    app: engine
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine-container
          image: 5minds/processcube_engine:17.0.0
          ports:
            - containerPort: 10560
