base/engine/service.yml
apiVersion: v1
kind: Service
metadata:
  name: engine
  labels:
    app: engine
spec:
  ports:
    - port: 10560
      protocol: TCP
      targetPort: 10560
  selector:
    app: engine
