base/engine/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: engine
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - engine.dev.5minds.cloud
    secretName: engine-ingress-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: engine
                port:
                  number: 10560
